# serializer version: 1
# name: TestOscillator.test_reset
  3.8697802427798167
# ---
# name: TestOscillator.test_reset.1
  2.1943921987602617
# ---
# name: TestOscillator.test_reset.2
  4.292989599556912
# ---
# name: TestOscillator.test_reset.3
  3.4868401452968194
# ---
# name: TestOscillator.test_reset.4
  0.47088673943824766
# ---
# name: TestOscillator.test_reset.5
  4.878111758183779
# ---
# name: TestOscillator.test_reset.6
  8.0
# ---
# name: TestOscillator.test_reset.7
  -4.513159854703181
# ---
# name: TestOscillator.test_reset.8
  dict({
    'reference': 8.0,
    'reference_error': -4.513159854703181,
    'state_of_interest': 3.4868401452968194,
  })
# ---
# name: TestOscillator.test_step
  7.184922250066178
# ---
# name: TestOscillator.test_step.1
  4.1592801720526165
# ---
# name: TestOscillator.test_step.10
  False
# ---
# name: TestOscillator.test_step.11
  dict({
    'reference': 8.219875313546899,
    'reference_error': -4.323080738123117,
    'state_of_interest': 3.896794575423781,
  })
# ---
# name: TestOscillator.test_step.12
  9.577735825425492
# ---
# name: TestOscillator.test_step.13
  4.063539001651491
# ---
# name: TestOscillator.test_step.14
  13.595016665928995
# ---
# name: TestOscillator.test_step.15
  4.812574460908943
# ---
# name: TestOscillator.test_step.16
  1.4115969371895978
# ---
# name: TestOscillator.test_step.17
  6.429359514754337
# ---
# name: TestOscillator.test_step.18
  8.439533636705194
# ---
# name: TestOscillator.test_step.19
  -3.6269591757962516
# ---
# name: TestOscillator.test_step.2
  9.208714559061189
# ---
# name: TestOscillator.test_step.20
  13.154832862892624
# ---
# name: TestOscillator.test_step.21
  False
# ---
# name: TestOscillator.test_step.22
  False
# ---
# name: TestOscillator.test_step.23
  dict({
    'reference': 8.439533636705194,
    'reference_error': -3.6269591757962516,
    'state_of_interest': 4.812574460908943,
  })
# ---
# name: TestOscillator.test_step.24
  11.888788905713866
# ---
# name: TestOscillator.test_step.25
  7.409917060593791
# ---
# name: TestOscillator.test_step.26
  12.595033248290306
# ---
# name: TestOscillator.test_step.27
  6.056257725322485
# ---
# name: TestOscillator.test_step.28
  1.9770673612224603
# ---
# name: TestOscillator.test_step.29
  8.218800610417716
# ---
# name: TestOscillator.test_step.3
  3.896794575423781
# ---
# name: TestOscillator.test_step.30
  8.6587581932296
# ---
# name: TestOscillator.test_step.31
  -2.602500467907115
# ---
# name: TestOscillator.test_step.32
  6.773008685456752
# ---
# name: TestOscillator.test_step.33
  False
# ---
# name: TestOscillator.test_step.34
  False
# ---
# name: TestOscillator.test_step.35
  dict({
    'reference': 8.6587581932296,
    'reference_error': -2.602500467907115,
    'state_of_interest': 6.056257725322485,
  })
# ---
# name: TestOscillator.test_step.36
  12.261853445830182
# ---
# name: TestOscillator.test_step.37
  8.12078526069157
# ---
# name: TestOscillator.test_step.38
  15.539598422713649
# ---
# name: TestOscillator.test_step.39
  7.595088486717355
# ---
# name: TestOscillator.test_step.4
  0.7937362868735947
# ---
# name: TestOscillator.test_step.40
  3.0440300492441192
# ---
# name: TestOscillator.test_step.41
  9.740877893519102
# ---
# name: TestOscillator.test_step.42
  8.877332634950129
# ---
# name: TestOscillator.test_step.43
  -1.282244148232774
# ---
# name: TestOscillator.test_step.44
  1.6441500556771922
# ---
# name: TestOscillator.test_step.45
  False
# ---
# name: TestOscillator.test_step.46
  False
# ---
# name: TestOscillator.test_step.47
  dict({
    'reference': 8.877332634950129,
    'reference_error': -1.282244148232774,
    'state_of_interest': 7.595088486717355,
  })
# ---
# name: TestOscillator.test_step.48
  13.535969202627244
# ---
# name: TestOscillator.test_step.49
  10.96253172105578
# ---
# name: TestOscillator.test_step.5
  5.272303388621858
# ---
# name: TestOscillator.test_step.50
  15.426186139778938
# ---
# name: TestOscillator.test_step.51
  9.101279728847143
# ---
# name: TestOscillator.test_step.52
  4.160713888000123
# ---
# name: TestOscillator.test_step.53
  11.64276096754214
# ---
# name: TestOscillator.test_step.54
  9.095041255281616
# ---
# name: TestOscillator.test_step.55
  0.0062384735655260926
# ---
# name: TestOscillator.test_step.56
  3.891855242776784e-05
# ---
# name: TestOscillator.test_step.57
  False
# ---
# name: TestOscillator.test_step.58
  False
# ---
# name: TestOscillator.test_step.59
  dict({
    'reference': 9.095041255281616,
    'reference_error': 0.0062384735655260926,
    'state_of_interest': 9.101279728847143,
  })
# ---
# name: TestOscillator.test_step.6
  8.219875313546899
# ---
# name: TestOscillator.test_step.7
  -4.323080738123117
# ---
# name: TestOscillator.test_step.8
  18.689027068331118
# ---
# name: TestOscillator.test_step.9
  False
# ---
